@@ -19,7 +19,7 @@ The application is distributed via a *jar-file*.
 ### Running pre-built binary
 It can be downloaded from the [releases](https://github.com/ilyavy/lingualeo-book-reading-assistant/releases) tab in the repository. And then launched from the directory, where it was downloaded, using the command (for the latest release):
 ```shell
-java -jar lingualeo-book-reading-assistant-1.0.0.jar
+java --enable-preview -jar lingualeo-book-reading-assistant-1.0.0.jar
 ```
 The application will start in a new window.
 
@@ -30,7 +30,7 @@ mvn package
 ```
 The application then can be run from `target` directory with the command:
 ```shell
-java -jar lingualeo-book-reading-assistant.jar
+java --enable-preview -jar lingualeo-book-reading-assistant.jar
 ```
 
 ## Project's structure
